tests/pass/run/callback_mutable_value_capture/main.kira
@Main
function main() {
    var offset: Int = 1
    let printer: (Int) -> Void = { value in
        offset = offset + value
    }
    printer(1)
    print(offset)
    return
}
