tests/fail/semantics/trailing_callback_capture/main.kira
function register(handler: (Int) -> Void) {
    handler(1)
    return
}

@Main
function main() {
    var offset: Int = 1
    register { value in
        print(value + offset)
    }
    return
}
